<resources>
    <string name="app_name">Smart Library</string>

    <string name="google_server_oauth2_client_id" translatable="false">21891812757-c3ic4e2kanognt9ilgtnfj99ot25jg0r.apps.googleusercontent.com</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">Log In</string>
    <string name="button_text_google_login">Log In With Google</string>
    
    <string name="drawer_main_screen">Home</string>
    <string name="drawer_scan_book">Scan Book</string>
    <string name="drawer_borrowed">Borrowed</string>
    <string name="drawer_recommended">Recommended</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_settings">Settings</string>

    <string name="cancel_action">Cancel</string>
    <string name="save_action">Save</string>
    <string name="search_hint">Search</string>

    <string name="book_author">by %1$s</string>
    <string name="book_year_genre">%1$s | %2$s</string>

    <string name="borrow_book_button">Borrow</string>
    <string name="book_extend_period">Extend Period</string>
    <string name="book_read">Already Read</string>

    <string name="recommendations">Loaned together</string>
    <string name="deadline">Deadline</string>

    <string name="scan_book">Scan your book</string>
    <string name="due_soon">Due Soon</string>
    <string name="already_read">Read</string>

    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_email">Email</string>

</resources>
