<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_drawer_menu_main_action"
            android:checked="true"
            android:title="@string/drawer_main_screen"/>

        <item
            android:id="@+id/navigation_drawer_menu_borrowed_action"
            android:title="@string/drawer_borrowed"/>

        <item
            android:id="@+id/navigation_drawer_menu_scan_book_action"
            android:title="@string/drawer_scan_book"/>

        <item
            android:id="@+id/navigation_drawer_menu_recommended_action"
            android:title="@string/drawer_recommended"/>

    </group>
    <group
        android:id="@+id/menu_top2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_drawer_menu_profile_action"
            android:title="@string/drawer_profile"/>

        <item
            android:id="@+id/navigation_drawer_menu_settings_action"
            android:title="@string/drawer_settings"/>
    </group>
</menu>