<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        card_view:cardCornerRadius="4dp"
        card_view:contentPadding="@dimen/activity_horizontal_margin"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/row_book_layout_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/row_book_layout_author_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row_book_layout_title_textview"
                android:layout_marginTop="8dp"
                android:text="@string/book_author"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/row_book_layout_year_genre_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/book_year_genre"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="76dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true">
                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/row_book_layout_cover_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@color/white" />
                <TextView
                    android:id="@+id/row_book_layout_due_soon_textview"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/due_soon"
                    android:textColor="@color/white"
                    android:background="@color/red_late"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/row_book_layout_read_textview"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/already_read"
                    android:textColor="@color/black"
                    android:background="@color/grey_read"
                    android:visibility="gone"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>